--- a/package.json
+++ b/package.json
@@ -6,30 +6,44 @@
     "start": "node index.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "watch": "npm-watch"
   },
   "author": "Shamoil Arsiwala",
   "license": "ISC",
   "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
     "@fortawesome/fontawesome-free": "^5.13.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "axios": "^0.27.2",
     "bootstrap": "^4.5.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
+    "express": "^4.17.1",
     "firebase": "^7.20.0",
     "firebase-tools": "^8.10.0",
     "font-awesome": "^4.7.0",
+    "mongodb": "^4.7.0",
+    "mongoose": "^6.4.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "npm-watch": "^0.11.0"
   },
   "eslintConfig": {
     "extends": "react-app"
+  },
+  "watch": {
+    "build": {
+      "patterns": [
+        "src"
+      ],
+      "extensions": "js,jsx"
+    }
   },
   "browserslist": {
     "production": [
